--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,10 @@
-<p>
-  signup works!
-</p>
+<section>
+  <form>
+    <mat-form-field>
+      <input matInput type="email" matInput placeholder="Your email" />
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="password" matInput placeholder="Your password" />
+    </mat-form-field>
+  </form>
+</section>
