--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
-<section>
-  <form>
+<section class="signup-form">
+  <form fxLayout="column" fxLayoutAlign="center center">
     <mat-form-field>
       <input matInput type="email" matInput placeholder="Your email" />
     </mat-form-field>
