--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -13,9 +13,18 @@
         placeholder="Your email"
         ngModel
         name="email"
+        email
+        required
+        #emailInput="ngModel"
       />
+      <mat-error *ngIf="emailInput.hasError('required')"
+        >Field must not be empty.</mat-error
+      >
+      <mat-error *ngIf="!emailInput.hasError('required')"
+        >Email is invalid.</mat-error
+      >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field hintLabel="Should be at least 6 characters long.">
       <input
         matInput
         type="password"
@@ -23,7 +32,12 @@
         placeholder="Your password"
         ngModel
         name="password"
+        required
+        minlength="6"
+        #pwInput="ngModel"
       />
+      <mat-hint align="end">{{ pwInput.value?.length }} / 6</mat-hint>
+      <mat-error>Is not at least 6 characters long</mat-error>
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary">Submit</button>
   </form>
