--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,34 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <div><button (click)="sidenav.toggle()">Toggle Sidenav</button></div>
-      <div>LOGO</div>
       <div>
-        <a [routerLink]="['/signup']" routerLinkActive="router-link-active"
-          >Signup</a
-        >
-        <a [routerLink]="['/login']" routerLinkActive="router-link-active"
-          >Login</a
-        >
-        <a [routerLink]="['/training']" routerLinkActive="router-link-active"
-          >Training</a
-        >
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+      <div>
+        <a [routerLink]="['/']" routerLinkActive="router-link-active">LOGO</a>
+      </div>
+      <div fxFlex fxLayout fxLayoutAlign="flex-end">
+        <ul fxLayout fxLayoutGap="10px" class="navigation-items">
+          <li>
+            <a [routerLink]="['/signup']" routerLinkActive="router-link-active"
+              >Signup</a
+            >
+          </li>
+          <li>
+            <a [routerLink]="['/login']" routerLinkActive="router-link-active"
+              >Login</a
+            >
+          </li>
+          <li>
+            <a
+              [routerLink]="['/training']"
+              routerLinkActive="router-link-active"
+              >Training</a
+            >
+          </li>
+        </ul>
       </div>
     </mat-toolbar>
     <main>
