--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,40 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <p>I'm the sidenav!</p>
+    <mat-nav-list>
+      <a
+        mat-list-item
+        [routerLink]="['/signup']"
+        routerLinkActive="router-link-active"
+        (click)="sidenav.close()"
+      >
+        <mat-icon>face</mat-icon>
+        <span class="nav-caption">Signup</span>
+      </a>
+      <a
+        mat-list-item
+        [routerLink]="['/login']"
+        routerLinkActive="router-link-active"
+        (click)="sidenav.close()"
+      >
+        <mat-icon>input</mat-icon>
+        <span class="nav-caption">Login</span>
+      </a>
+      <a
+        mat-list-item
+        [routerLink]="['/training']"
+        routerLinkActive="router-link-active"
+        (click)="sidenav.close()"
+      >
+        <mat-icon>directions_run</mat-icon>
+        <span class="nav-caption">Training</span>
+      </a>
+      <mat-list-item>
+        <button mat-icon-button (click)="sidenav.close()">
+          <mat-icon>eject</mat-icon>
+          <span class="nav-caption">Logout</span>
+        </button>
+      </mat-list-item>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
@@ -30,6 +64,9 @@
               routerLinkActive="router-link-active"
               >Training</a
             >
+          </li>
+          <li>
+            <a>Logout</a>
           </li>
         </ul>
       </div>
