--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -9,22 +9,22 @@
   </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-      <li>
+      <li *ngIf="!isAuth">
         <a [routerLink]="['/signup']" routerLinkActive="router-link-active"
           >Signup</a
         >
       </li>
-      <li>
+      <li *ngIf="!isAuth">
         <a [routerLink]="['/login']" routerLinkActive="router-link-active"
           >Login</a
         >
       </li>
-      <li>
+      <li *ngIf="isAuth">
         <a [routerLink]="['/training']" routerLinkActive="router-link-active"
           >Training</a
         >
       </li>
-      <li>
+      <li *ngIf="isAuth">
         <a>Logout</a>
       </li>
     </ul>
