--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -25,7 +25,7 @@
         >
       </li>
       <li *ngIf="isAuth">
-        <a>Logout</a>
+        <a style="cursor: pointer" (click)="onLogout()">Logout</a>
       </li>
     </ul>
   </div>
