87. Restructuring the Code

--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -9,7 +9,7 @@
           <mat-label>Chose exercise</mat-label>
           <mat-select ngModel name="exercise" required>
             <mat-option
-              *ngFor="let exercise of exercises | async"
+              *ngFor="let exercise of exercises"
               value="{{ exercise.id }}"
             >
               {{ exercise.name }}
