--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -39,6 +39,7 @@
     </mat-form-field>
 
     <button
+      *ngIf="!isLoading"
       type="submit"
       mat-raised-button
       color="primary"
@@ -46,5 +47,6 @@
     >
       Log in
     </button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
