--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,7 +5,7 @@
         >Time to start a workout!</mat-card-title
       >
       <mat-card-content fxLayoutAlign="center">
-        <mat-form-field>
+        <mat-form-field *ngIf="!isLoading">
           <mat-label>Chose exercise</mat-label>
           <mat-select ngModel name="exercise" required>
             <mat-option
@@ -16,9 +16,10 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
       </mat-card-content>
       <mat-card-actions fxLayoutAlign="center">
-        <button type="submit" [disabled]="f.invalid">
+        <button type="submit" *ngIf="!isLoading" [disabled]="f.invalid">
           Start
         </button>
       </mat-card-actions>
