104. Improving Error Handling

--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,7 +5,7 @@
         >Time to start a workout!</mat-card-title
       >
       <mat-card-content fxLayoutAlign="center">
-        <mat-form-field *ngIf="!(uiService.loadingStateChanged | async)">
+        <mat-form-field *ngIf="!isLoading && exercises">
           <mat-label>Chose exercise</mat-label>
           <mat-select ngModel name="exercise" required>
             <mat-option
@@ -16,17 +16,14 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-spinner
-          *ngIf="uiService.loadingStateChanged | async"
-        ></mat-spinner>
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
       </mat-card-content>
-      <mat-card-actions fxLayoutAlign="center">
-        <button
-          type="submit"
-          *ngIf="!(uiService.loadingStateChanged | async)"
-          [disabled]="f.invalid"
-        >
+      <mat-card-actions fxLayoutAlign="center" *ngIf="!isLoading">
+        <button *ngIf="exercises" type="submit" [disabled]="f.invalid">
           Start
+        </button>
+        <button *ngIf="!exercises" type="button" (click)="fetchExercises()">
+          Fetch Again
         </button>
       </mat-card-actions>
     </mat-card>
